syntax = "proto3";

package authentications;

message signUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message signUpResponse {
  bool success = 1;
  string msg = 2;
}

message signInRequest {
  string username = 1;
  string password = 3;
}

message signInResponse {
  bool success = 1;
  string msg = 2;
  string data = 3;
}

service Authentications {
  rpc signUp(signUpRequest) returns (signUpResponse);
  rpc signIn(signInRequest) returns (signInResponse);
}